--- a/views/about.html
+++ b/views/about.html
@@ -18,7 +18,7 @@
           I travel the world for fun!
         </li>
         <li id="techList">
-          How did I build this portfolio? Let's find out!
+          How did I build portfolio? Let's find out!
           <ul>
             <li class="list animated"><i class="fa fa-check" aria-hidden="true"></i> AngularJS</li>
             <li class="list animated"><i class="fa fa-check" aria-hidden="true"></i> SASS</li>
@@ -36,6 +36,7 @@
 
 
   </div>
+  
   <!-- <div id="summary">
     <div id="aboutBox">
       <h2>Vakhtang Tarielovich Kobiashvili</h2>
