--- a/views/navbar.html
+++ b/views/navbar.html
@@ -9,7 +9,14 @@
     </div>
 
     <div class="collapse navbar-collapse" id="myNavbar">
+
+
       <ul class="nav navbar-nav">
+				<div id="extLinks">
+				  <a href="https://www.instagram.com/vak_k/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+				  <a href="https://www.facebook.com/Aregatou" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+				  <a href="https://github.com/Aregatou" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+				</div>
 				<li>
 					<a class="hvr-float" href="#!/home" onclick="this.blur();">
 						<i class="fa fa-home" aria-hidden="true"></i>
